--- a/FireOnWheels.Rest/Web.config
+++ b/FireOnWheels.Rest/Web.config
@@ -9,8 +9,8 @@
     <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
     <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
     <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\v11.0;Initial Catalog=aspnet-DispatchService-20150707162655;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-DispatchService-20150707162655.mdf" />
   </connectionStrings>
@@ -74,11 +74,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -110,9 +110,7 @@
   </entityFramework>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
   <UnicastBusConfig>
-    <MessageEndpointMappings>
-      <add Assembly="FireOnWheels.Messages" Type="FireOnWheels.Messages.ProcessOrderCommand" Endpoint="FireOnWheels.Saga" />
-    </MessageEndpointMappings>
+    <MessageEndpointMappings />
   </UnicastBusConfig>
   <AuditConfig QueueName="audit" />
 </configuration>
