--- a/FireOnWheelsUI/Web.config
+++ b/FireOnWheelsUI/Web.config
@@ -101,7 +101,9 @@
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Assembly="FireOnWheels.Messages" Type="FireOnWheels.Messages.IOrderProcessedEvent" Endpoint="fireonwheels.order" />
+      <add Assembly="FireOnWheels.Messages" 
+           Type="FireOnWheels.Messages.IOrderProcessedEvent" 
+           Endpoint="fireonwheels.order" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <AuditConfig QueueName="audit" />
