--- a/FireOnWheels.Saga/App.config
+++ b/FireOnWheels.Saga/App.config
@@ -25,7 +25,7 @@
   </UnicastBusConfig>-->
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Assembly="FireOnWheels.Messages" Type="FireOnWheels.Messages.DispatchOrderCommand" Endpoint="FireOnWheels.Dispatch"/>
+      <add Assembly="FireOnWheels.Messages" Type="FireOnWheels.Messages.DispatchOrderCommand" Endpoint="FireOnWheels.Rest"/>
       <add Assembly="FireOnWheels.Messages" Type="FireOnWheels.Messages.PlanOrderCommand" Endpoint="FireOnWheels.Planning"/>
     </MessageEndpointMappings>
   </UnicastBusConfig>
