Fixed config file

--- a/eCommerce.Rest/Web.config
+++ b/eCommerce.Rest/Web.config
@@ -110,7 +110,9 @@
   </entityFramework>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
   <UnicastBusConfig>
-    <MessageEndpointMappings />
+    <MessageEndpointMappings>
+      <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.ProcessOrderCommand" Endpoint="eCommerce.Saga" />
+    </MessageEndpointMappings>
   </UnicastBusConfig>
   <AuditConfig QueueName="audit" />
 </configuration>
