--- a/eCommerce.Saga/App.config
+++ b/eCommerce.Saga/App.config
@@ -25,8 +25,8 @@
   </UnicastBusConfig>-->
   <UnicastBusConfig>
     <MessageEndpointMappings>
+      <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.PlanOrderCommand" Endpoint="eCommerce.Planner"/>
       <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.DispatchOrderCommand" Endpoint="eCommerce.Rest"/>
-      <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.PlanOrderCommand" Endpoint="eCommerce.Planning"/>
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <!--<AuditConfig 
