--- a/eCommerceUI/Web.config
+++ b/eCommerceUI/Web.config
@@ -101,9 +101,13 @@
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Assembly="eCommerce.Messages" 
+      <!--<add Assembly="eCommerce.Messages" 
            Type="eCommerce.Messages.IOrderProcessedEvent" 
-           Endpoint="eCommerce.order" />
+           Endpoint="eCommerce.order" />-->
+
+      <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.ProcessOrderCommand" Endpoint="eCommerce.Saga" />
+      <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.PriceRequest" Endpoint="eCommerce.Order" />
+      <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.ProcessOrderCommand" Endpoint="eCommerce.Saga" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <AuditConfig QueueName="audit" />
