Fixed config errors

--- a/eCommerce.Saga/App.config
+++ b/eCommerce.Saga/App.config
@@ -26,7 +26,8 @@
   <UnicastBusConfig>
     <MessageEndpointMappings>
       <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.PlanOrderCommand" Endpoint="eCommerce.Planner"/>
-      <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.DispatchOrderCommand" Endpoint="eCommerce.Rest"/>
+      <!--<add Assembly="eCommerce.Messages" Type="eCommerce.Messages.DispatchOrderCommand" Endpoint="eCommerce.Rest"/>-->
+      <add Assembly="eCommerce.Messages" Type="eCommerce.Messages.DispatchOrderCommand" Endpoint="eCommerce.Order"/>
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <!--<AuditConfig 
