--- a/eCommerce.Order/eCommerce.Order.csproj
+++ b/eCommerce.Order/eCommerce.Order.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DispatchOrderCommand.cs" />
+    <Compile Include="DispatchOrderHandler.cs" />
     <Compile Include="Helper\EmailSender.cs" />
     <Compile Include="Helper\PriceCalculator.cs" />
     <Compile Include="PriceRequestHandler.cs" />
